--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "omMora",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
